fix cart gap in navbar

--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -59,9 +59,8 @@
 }
 
 @media (max-width: 990px) {
-	.user,
-	.cart {
-		margin-left: 0;
+	.user {
+		margin-right: -40px;
 	}
 	.navbar-expand-lg .navbar-nav {
 		align-items: flex-start;
